updating to do item actions from project show view, removing now unnecessary views and actions

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -10,6 +10,8 @@
   <% @project.to_do_items.each do |item| %>
   <li>
     <%= item.description %>
+    <%= link_to 'Edit', edit_to_do_item_path(item) %> |
+    <%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' } %>
   </li>
   <% end %>
 </ul>
