--- a/app/views/to_do_items/new.js.erb
+++ b/app/views/to_do_items/new.js.erb
@@ -1,2 +1,2 @@
-$('#to_do_items').prepend('<%= escape_javascript(render(:partial => 'form')) %>');
+$('#task-table').append('<%= escape_javascript(render(:partial => 'form')) %>');
 
