--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,27 +1,35 @@
-<h1>Listing projects</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-
+<%- model_class = Project -%>
+<div class="page-header">
+  <h1>My Projects</h1>
+</div>
+<table class="table table-striped">
   <tbody>
     <% @projects.each do |project| %>
       <tr>
-        <td><%= project.name %></td>
-        <td><%= link_to 'Show', project %></td>
-        <td><%= link_to 'Edit', edit_project_path(project) %></td>
-        <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <%= link_to project.name, project_path(project), :class => 'btn btn-link btn-block' %></td>
+
+        <td>
+          <div class="btn-container">
+            <%= button_to "Edit",
+                      edit_project_path(project), :class => 'btn btn-warning btn-block'%>
+          </div>
+        </td>
+        <td>
+          <div class="btn-container">
+            <%= button_to "Destroy",
+                      project_path(project),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-danger btn-block' %>
+          </div>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Project', new_project_path %>
+<%= button_to "New Project",
+            new_project_path,
+            method: :get,
+            :class => 'btn btn-primary' %>
