--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -6,7 +6,7 @@
 <h2>Tasks</h2>
 <div id="to_do_items">
 
-<table class="table table-striped" id="task-table">
+<table class="table" id="task-table">
   <%= render(@project.to_do_items) %>
 </table>
 
